--- a/index.html
+++ b/index.html
@@ -8,5 +8,183 @@
 </head>
 <body>
 	<h1>Juego#96</h1>
+<script>
+
+var game = new Game();
+game.addLevel([
+    "               ",
+    " Te movés con  ",
+    " las flechitas ",
+    "               ",
+    "   #########   ",
+    "   # ⋆ | ^ #   ",
+    "   #   |   #   ",
+    "   #   |   #   ",
+    "   #   |   #   ",
+    "   #   |   #   ",
+    "   # ^ | ⋆ #   ",
+    "   #########   ",
+    "               ",
+    " Llegá hasta   ",
+    " las estrellas.",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " Los % son la- ",
+    " va. Si los pi-",
+    " sás te morís! ",
+    "               ",
+    "  ###########  ",
+    "  # ⋆  |  ^ #  ",
+    "  #    |    #  ",
+    "  #    |    #  ",
+    "  #    |%%% #  ",
+    "  #%%% |    #  ",
+    "  # ^  |  ⋆ #  ",
+    "  ###########  ",
+    "               ",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " Los # son pa- ",
+    " redes. Te pue-",
+    " den ayudar.   ",
+    "               ",
+    "  ###########  ",
+    "  # ⋆  |  ^ #  ",
+    "  #  # |    #  ",
+    "  #    |    #  ",
+    "  #    |    #  ",
+    "  #    |    #  ",
+    "  # ^  |⋆   #  ",
+    "  ###########  ",
+    "               ",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " A ver si re-  ",
+    " solvés ésto...",
+    "               ",
+    " ############# ",
+    " #  ⋆  |^    # ",
+    " #     |    %# ",
+    " #     |%% %%# ",
+    " #% %  |     # ",
+    " #  #  | %%% # ",
+    " #  %%%|     # ",
+    " #   %%|     # ",
+    " #^   %|  ⋆  # ",
+    " ############# ",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " Bien, probe-  ",
+    " mos con éste  ",
+    "               ",
+	"###############",
+	"#^     |    %⋆#",
+	"#%%%% #| %    #",
+	"# %    |      #",
+	"#   %%%| %%%%%#",
+	"#⋆     |     ^#",
+	"###############",
+    "               ",
+    "               ",
+    "               ",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " ############# ",
+    " #  ⋆% | #^  # ",
+    " # %   |  %% # ",
+    " ##    |     # ",
+    " # %%% | %  %# ",
+    " #     |     # ",
+    " #% %  |   % # ",
+    " #   % |     # ",
+    " # %   | %%%%# ",
+    " #   % |     # ",
+    " #  %%%|% %  # ",
+    " #  ^ %|  ⋆  # ",
+    " ############# ",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " Déjà vu...    ",
+    "               ",
+	"###############",
+	"#^     |    %⋆#",
+	"#%%%% #| %    #",
+	"# %    |      #",
+	"#   %%%| %%%%%#",
+	"#⋆ %   |     ^#",
+	"###############",
+    "               ",
+    " (Podés apretar",
+    " la  `R´  para ",
+    " reiniciar el  ",
+    "    nivel.)    ",
+    "               "
+]);
+game.addLevel([
+    "               ",
+    " ############# ",
+    " #  ⋆ %|  ^  # ",
+    " #  %%%|%%   # ",
+    " #   %%|%%%% # ",
+    " #    %|   % # ",
+    " #%%   |     # ",
+    " # %%% |    %# ",
+    " # #   |  %%%# ",
+    " #   %%| %%%%# ",
+    " #  %%%|     # ",
+    " #   %%|   %%# ",
+    " #  ^  |  ⋆ %# ",
+    " ############# ",
+    "               "
+]);
+game.addLevel([
+	"                           ",
+	" ######################### ",
+	" #%  #   %   |^     %   ⋆# ",
+	" #   %     % |%%%     %  # ",
+	" # %      %  |%%  % #%   # ",
+	" #⋆%  %  #  ^|   %%    %%# ",
+	" ######################### ",
+	"                           "
+]);
+game.addLevel([
+	"                           ",
+	" ¡No de nuevo, decía!      ",
+	"                           ",
+	" ######################### ",
+	" #%  #   %   |^     %   ⋆# ",
+	" #   %     % |%%%    %%  # ",
+	" # %      %  |%%  % #%   # ",
+	" #⋆%  %  #  ^|   %%    %%# ",
+	" ######################### ",
+	"                           "
+]);
+game.loadLevel();
+
+var canvas = document.createElement("canvas");
+var cx = canvas.getContext("2d");
+
+game.refresh = function() {
+	canvasRenderer( game.level.map, cx );
+};
+game.refresh();
+onTilesetLoad = game.refresh;
+
+window.onload = function() {
+	document.body.appendChild(canvas);
+}
+</script>
 </body>
 </html>
