--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Juego#96</title>
 	<link rel="stylesheet" href="estilo.css">
+    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
 	<script src="script.js"></script>
 </head>
 <body>
@@ -12,23 +13,22 @@
 
 var game = new Game();
 game.addLevel([
-    "               ",
-    " Te movés con  ",
-    " las flechitas ",
-    "               ",
-    "   #########   ",
-    "   # ⋆ | ^ #   ",
-    "   #   |   #   ",
-    "   #   |   #   ",
-    "   #   |   #   ",
-    "   #   |   #   ",
-    "   # ^ | ⋆ #   ",
-    "   #########   ",
-    "               ",
-    " Llegá hasta   ",
-    " las estrellas.",
-    "               "
-]);
+"               ",
+" Te movés con  ",
+" las flechitas ",
+"               ",
+"   #########   ",
+"   # ⋆ # ^ #   ",
+"   #   #   #   ",
+"   #   #   #   ",
+"   #   #   #   ",
+"   #   #   #   ",
+"   # ^ # ⋆ #   ",
+"   #########   ",
+"               ",
+" Llegá hasta   ",
+" las estrellas.",
+"               "]);
 game.addLevel([
     "               ",
     " Los % son la- ",
