--- a/index.html
+++ b/index.html
@@ -29,148 +29,118 @@ game.addLevel([
 " Llegá hasta   ",
 " las estrellas.",
 "               "]);
-game.addLevel([
-    "               ",
-    " Los % son la- ",
-    " va. Si los pi-",
-    " sás te morís! ",
-    "               ",
-    "  ###########  ",
-    "  # ⋆  |  ^ #  ",
-    "  #    |    #  ",
-    "  #    |    #  ",
-    "  #    |%%% #  ",
-    "  #%%% |    #  ",
-    "  # ^  |  ⋆ #  ",
-    "  ###########  ",
-    "               ",
-    "               "
-]);
-game.addLevel([
-    "               ",
-    " Los # son pa- ",
-    " redes. Te pue-",
-    " den ayudar.   ",
-    "               ",
-    "  ###########  ",
-    "  # ⋆  |  ^ #  ",
-    "  #  # |    #  ",
-    "  #    |    #  ",
-    "  #    |    #  ",
-    "  #    |    #  ",
-    "  # ^  |⋆   #  ",
-    "  ###########  ",
-    "               ",
-    "               "
-]);
-game.addLevel([
-    "               ",
-    " A ver si re-  ",
-    " solvés ésto...",
-    "               ",
-    " ############# ",
-    " #  ⋆  |^    # ",
-    " #     |    %# ",
-    " #     |%% %%# ",
-    " #% %  |     # ",
-    " #  #  | %%% # ",
-    " #  %%%|     # ",
-    " #   %%|     # ",
-    " #^   %|  ⋆  # ",
-    " ############# ",
-    "               "
-]);
-game.addLevel([
-    "               ",
-    " Bien, probe-  ",
-    " mos con éste  ",
-    "               ",
-	"###############",
-	"#^     |    %⋆#",
-	"#%%%% #| %    #",
-	"# %    |      #",
-	"#   %%%| %%%%%#",
-	"#⋆     |     ^#",
-	"###############",
-    "               ",
-    "               ",
-    "               ",
-    "               "
-]);
-game.addLevel([
-    "               ",
-    " ############# ",
-    " #  ⋆% | #^  # ",
-    " # %   |  %% # ",
-    " ##    |     # ",
-    " # %%% | %  %# ",
-    " #     |     # ",
-    " #% %  |   % # ",
-    " #   % |     # ",
-    " # %   | %%%%# ",
-    " #   % |     # ",
-    " #  %%%|% %  # ",
-    " #  ^ %|  ⋆  # ",
-    " ############# ",
-    "               "
-]);
-game.addLevel([
-    "               ",
-    " Déjà vu...    ",
-    "               ",
-	"###############",
-	"#^     |    %⋆#",
-	"#%%%% #| %    #",
-	"# %    |      #",
-	"#   %%%| %%%%%#",
-	"#⋆ %   |     ^#",
-	"###############",
-    "               ",
-    " (Podés apretar",
-    " la  `R´  para ",
-    " reiniciar el  ",
-    "    nivel.)    ",
-    "               "
-]);
-game.addLevel([
-    "               ",
-    " ############# ",
-    " #  ⋆ %|  ^  # ",
-    " #  %%%|%%   # ",
-    " #   %%|%%%% # ",
-    " #    %|   % # ",
-    " #%%   |     # ",
-    " # %%% |    %# ",
-    " # #   |  %%%# ",
-    " #   %%| %%%%# ",
-    " #  %%%|     # ",
-    " #   %%|   %%# ",
-    " #  ^  |  ⋆ %# ",
-    " ############# ",
-    "               "
-]);
-game.addLevel([
-	"                           ",
-	" ######################### ",
-	" #%  #   %   |^     %   ⋆# ",
-	" #   %     % |%%%     %  # ",
-	" # %      %  |%%  % #%   # ",
-	" #⋆%  %  #  ^|   %%    %%# ",
-	" ######################### ",
-	"                           "
-]);
-game.addLevel([
-	"                           ",
-	" ¡No de nuevo, decía!      ",
-	"                           ",
-	" ######################### ",
-	" #%  #   %   |^     %   ⋆# ",
-	" #   %     % |%%%    %%  # ",
-	" # %      %  |%%  % #%   # ",
-	" #⋆%  %  #  ^|   %%    %%# ",
-	" ######################### ",
-	"                           "
-]);
+game.addLevel(["               ",
+"  No pises la  ",
+"  lava.        ",
+"               ",
+"  ###########  ",
+"  # ⋆  #  ^ #  ",
+"  #    #    #  ",
+"  #    #    #  ",
+"  #    #%%% #  ",
+"  #%%% #    #  ",
+"  # ^  #  ⋆ #  ",
+"  ###########  ",
+"               ",
+"               "]);
+game.addLevel(["               ",
+"  Las paredes  ",
+"   te pueden   ",
+"    ayudar.    ",
+"               ",
+"  ###########  ",
+"  # ⋆  #  ^ #  ",
+"  #  | #    #  ",
+"  #    #    #  ",
+"  #    #    #  ",
+"  #    #    #  ",
+"  # ^  #⋆   #  ",
+"  ###########  ",
+"               ",
+"               "]);
+game.addLevel(["               ",
+" Ya se empieza ",
+"a poner difícil",
+"               ",
+" ############# ",
+" #  ⋆  #^    # ",
+" #     #    %# ",
+" #     #%% %%# ",
+" #% %  #     # ",
+" #  |  # %%% # ",
+" #  %%%#     # ",
+" #   %%#     # ",
+" #^   %#  ⋆  # ",
+" ############# ",
+"               "]);
+game.addLevel(["                 ",
+" ############### ",
+" #^     #    %⋆# ",
+" #%%%% |# %    # ",
+" # %    #      # ",
+" #   %%%# %%%%%# ",
+" #⋆     #     ^# ",
+" ############### ",
+"                 "]);
+game.addLevel(["               ",
+" |#|#|#|#|#|#| ",
+" #  ⋆% # #^  # ",
+" | %   |  %% | ",
+" #|    #     # ",
+" | %%% | %  %| ",
+" #     #     # ",
+" |% %  |   % | ",
+" #   % #     # ",
+" | %   | %%%%| ",
+" #   % #     # ",
+" |  %%%|% %  | ",
+" #  ^ %#  ⋆  # ",
+" |#|#|#|#|#|#| ",
+"               "]);
+game.addLevel(["               ",
+" Déjà vu...    ",
+"               ",
+"###############",
+"#^     #    %⋆#",
+"#%%%% |# %    #",
+"# %    #      #",
+"#   %%%# %%%%%#",
+"#⋆ %   #     ^#",
+"###############",
+"               "]);
+game.addLevel(["               ",
+" ############# ",
+" #  ⋆ %#  ^  # ",
+" #  %%%#%%   # ",
+" #   %%#%%%% # ",
+" #    %#   % # ",
+" #%%   #     # ",
+" # %%% #    %# ",
+" # |   #  %%%# ",
+" #   %%# %%%%# ",
+" #  %%%#     # ",
+" #   %%#   %%# ",
+" #  ^  #  ⋆ %# ",
+" ############# ",
+"               "]);
+game.addLevel(["                           ",
+" ######################### ",
+" #%  |   %   #^     %   ⋆# ",
+" #   %     % #%%%     %  # ",
+" # %      %  #%%  % |%   # ",
+" #⋆%  %  |  ^#   %%    %%# ",
+" ######################### ",
+"                           "]);
+game.addLevel(["                           ",
+" ¡No de nuevo, decía!      ",
+"                           ",
+" ######################### ",
+" #%  |   %   #^     %   ⋆# ",
+" #   %     % #%%%    %%  # ",
+" # %      %  #%%  % |%   # ",
+" #⋆%  %  |  ^#   %%    %%# ",
+" ######################### ",
+"                           "]);
 game.loadLevel();
 
 var canvas = document.createElement("canvas");
