hola, vengo a pushear

--- a/index.html
+++ b/index.html
@@ -12,134 +12,144 @@
 <script>
 
 var game = new Game();
-game.addLevel([
-"               ",
-" Te movés con  ",
-" las flechitas ",
-"               ",
-"   #########   ",
-"   # ⋆ # ^ #   ",
-"   #   #   #   ",
-"   #   #   #   ",
-"   #   #   #   ",
-"   #   #   #   ",
-"   # ^ # ⋆ #   ",
-"   #########   ",
-"               ",
-" Llegá hasta   ",
-" las estrellas.",
-"               "]);
+// Introducción:
+game.addLevel(["            ",
+"  <°& <°¬   ",
+"  &^& &     ",
+"  &⋆& <°&   ",
+"  |°& &⋆&   ",
+"    & &`&   ",
+"  |°¬ |°¬   ",
+"            ",
+"            ",
+"https://gith",
+"ub.com/mauro",
+"c8/juego96  "]);
+
+// Nivel 1:
+game.addLevel(["           ",
+" <°°°<°°°& ",
+" & ⋆ & ` & ",
+" &   &   & ",
+" &   &   & ",
+" &   &   & ",
+" &   &   & ",
+" & ^ & ⋆ & ",
+" |°°°°°°°¬ ",
+"           "]);
+
+// Nivel 2:
+game.addLevel(["             ",
+" <°°°°<°°°°& ",
+" & ⋆  &  ` & ",
+" &    &    & ",
+" &    &    & ",
+" &    &--- & ",
+" &--- &    & ",
+" & ^  &  ⋆ & ",
+" |°°°°°°°°°¬ ",
+"             "]);
+
+//Nivel 3:
+game.addLevel(["             ",
+" <°°°°<°°°°& ",
+" & ⋆  &  ` & ",
+" &  # &    & ",
+" &    &    & ",
+" &    &    & ",
+" &    &    & ",
+" & ^  &⋆   & ",
+" |°°°°°°°°°¬ ",
+"             "]);
+
+//Nivel 4:
 game.addLevel(["               ",
-"  No pises la  ",
-"  lava.        ",
-"               ",
-"  ###########  ",
-"  # ⋆  #  ^ #  ",
-"  #    #    #  ",
-"  #    #    #  ",
-"  #    #%%% #  ",
-"  #%%% #    #  ",
-"  # ^  #  ⋆ #  ",
-"  ###########  ",
-"               ",
+" <°°°°°<°°°°°& ",
+" &  ⋆  &`    & ",
+" &     &    -& ",
+" &     &-- -%& ",
+" &- -  &     & ",
+" &  #  & --- & ",
+" &  ---&     & ",
+" &   %%&     & ",
+" &^   %&  ⋆  & ",
+" |°°°°°°°°°°°¬ ",
 "               "]);
-game.addLevel(["               ",
-"  Las paredes  ",
-"   te pueden   ",
-"    ayudar.    ",
-"               ",
-"  ###########  ",
-"  # ⋆  #  ^ #  ",
-"  #  | #    #  ",
-"  #    #    #  ",
-"  #    #    #  ",
-"  #    #    #  ",
-"  # ^  #⋆   #  ",
-"  ###########  ",
-"               ",
-"               "]);
-game.addLevel(["               ",
-" Ya se empieza ",
-"a poner difícil",
-"               ",
-" ############# ",
-" #  ⋆  #^    # ",
-" #     #    %# ",
-" #     #%% %%# ",
-" #% %  #     # ",
-" #  |  # %%% # ",
-" #  %%%#     # ",
-" #   %%#     # ",
-" #^   %#  ⋆  # ",
-" ############# ",
-"               "]);
+
+//Nivel 5:
 game.addLevel(["                 ",
-" ############### ",
-" #^     #    %⋆# ",
-" #%%%% |# %    # ",
-" # %    #      # ",
-" #   %%%# %%%%%# ",
-" #⋆     #     ^# ",
-" ############### ",
+" <°°°°°°<°°°°°°& ",
+" &^     &    -⋆& ",
+" &---- |& -    & ",
+" & %    &      & ",
+" &   ---& -----& ",
+" &⋆     &     `& ",
+" |°°°°°°°°°°°°°¬ ",
 "                 "]);
+
+//Nivel 6:
 game.addLevel(["               ",
-" |#|#|#|#|#|#| ",
-" #  ⋆% # #^  # ",
-" | %   |  %% | ",
-" #|    #     # ",
-" | %%% | %  %| ",
-" #     #     # ",
-" |% %  |   % | ",
-" #   % #     # ",
-" | %   | %%%%| ",
-" #   % #     # ",
-" |  %%%|% %  | ",
-" #  ^ %#  ⋆  # ",
-" |#|#|#|#|#|#| ",
+" <°°°°°<°<°°°& ",
+" &  ⋆- & #`  & ",
+" & -   &  -- & ",
+" &¬    &     & ",
+" & --- & -  -& ",
+" &     &     & ",
+" &- -  &   - & ",
+" &   - &     & ",
+" & -   & ----& ",
+" &   - &     & ",
+" &  -%-&- -  & ",
+" &  ^ %&  ⋆  & ",
+" |°°°°°°°°°°°¬ ",
 "               "]);
+
+//Nivel 7:
+game.addLevel(["                 ",
+" <°°°°°°<°°°°°°& ",
+" &^     &    -⋆& ",
+" &---- |& -    & ",
+" & %    &      & ",
+" &   ---& -----& ",
+" &⋆ -   &     `& ",
+" |°°°°°°°°°°°°°¬ ",
+"                 "]);
+
+//Nivel 8:
 game.addLevel(["               ",
-" Déjà vu...    ",
-"               ",
-"###############",
-"#^     #    %⋆#",
-"#%%%% |# %    #",
-"# %    #      #",
-"#   %%%# %%%%%#",
-"#⋆ %   #     ^#",
-"###############",
+" <°°°°°<°°°°°& ",
+" &  ⋆ -&  `  & ",
+" &  --%&--   & ",
+" &   %%&%%-- & ",
+" &    %&%  % & ",
+" &--   &     & ",
+" & %-- &    -& ",
+" & #   &  --%& ",
+" &   --& -%%%& ",
+" &  -%%&  %%%& ",
+" &   %%&   %%& ",
+" &  ^  &  ⋆ %& ",
+" °°°°°°°°°°°°¬ ",
 "               "]);
-game.addLevel(["               ",
-" ############# ",
-" #  ⋆ %#  ^  # ",
-" #  %%%#%%   # ",
-" #   %%#%%%% # ",
-" #    %#   % # ",
-" #%%   #     # ",
-" # %%% #    %# ",
-" # |   #  %%%# ",
-" #   %%# %%%%# ",
-" #  %%%#     # ",
-" #   %%#   %%# ",
-" #  ^  #  ⋆ %# ",
-" ############# ",
-"               "]);
+
+//Nivel 9:
 game.addLevel(["                           ",
-" ######################### ",
-" #%  |   %   #^     %   ⋆# ",
-" #   %     % #%%%     %  # ",
-" # %      %  #%%  % |%   # ",
-" #⋆%  %  |  ^#   %%    %%# ",
-" ######################### ",
+" <°°°<°°°°°°°<°°°°°°°°°°°& ",
+" &-  #   -   &`     -   ⋆& ",
+" &   -     - &---     -  & ",
+" & -      -  &%%  - #-   & ",
+" &⋆%  -  &  ^&   -%    --& ",
+" |°°°°°°°°°°°°°°°°°°°°°°°¬ ",
 "                           "]);
+
+//Nivel 10:
 game.addLevel(["                           ",
-" ¡No de nuevo, decía!      ",
-"                           ",
-" ######################### ",
-" #%  |   %   #^     %   ⋆# ",
-" #   %     % #%%%    %%  # ",
-" # %      %  #%%  % |%   # ",
-" #⋆%  %  |  ^#   %%    %%# ",
-" ######################### ",
+" <°°°<°°°°°°°<°°°°°°°°°°°& ",
+" &-  #   -   &`     -   ⋆& ",
+" &   -     - &---     -  & ",
+" & -      -  &%%  - #-   & ",
+" &⋆%  -  &  ^&   -%    --& ",
+" |°°°°°°°°°°°°°°°°°°°°°°°¬ ",
 "                           "]);
 game.loadLevel();
 
