trying to get a new sprite to work... unsuccessfully...

--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@ game.addLevel(["           ",
 "           "]);
 
 // Nivel 2:
-game.addLevel(["             ",
-" <°°°°<°°°°& ",
-" & ⋆  &  ` & ",
-" &    &    & ",
-" &    &    & ",
-" &    &--- & ",
-" &--- &    & ",
-" & ^  &  ⋆ & ",
-" |°°°°°°°°°¬ ",
-"             "]);
+game.addLevel(["%%%%%%%%%%%%%%%%%",
+"%%       %%⋆   %%",
+"%% ----- %%--- %%",
+"%% %^    %%%%% %%",
+"%% %-----%%%%% %%",
+"%% %%%%%    `% %%",
+"%% %%%%% ----% %%",
+"%%   ⋆%%       %%",
+"%%----%%-------%%"]);
 
 //Nivel 3:
 game.addLevel(["             ",
@@ -132,6 +131,24 @@ game.addLevel(["               ",
 " |°°°°°°°&% ⋆& ",
 "         |°°°¬ ",
 "               "]);
+
+//Nivel 8 bis "El mirador":
+game.addLevel(["               ",
+" <°°°°°<°°°°°< ",
+" &^ ---&  ⋆ -& ",
+" &-  %%& - ▪%& ",
+" &% - |& %-  & ",
+" &%   -&   - & ",
+" &%--  &-  % & ",
+" &%%%- &     & ",
+" &%#   & --- & ",
+" &%  --& #%%-& ",
+" &% -%%&     & ",
+" &%  %|¬  -  & ",
+" &%-⋆ ■---% |& ",
+" &%&◀◀#%%%% `& ",
+" |%----%%%%°°¬ ",
+"--%%%%%%%%%----"]);
 
 //Nivel 9:
 game.addLevel(["                           ",
