Signed-off-by: mauroc8 <maurocanablusa@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<h1>Juego#96</h1>
 <script src="niveles.js"></script>
 <script>
+
+var game = getGAME();
+game.loadLevel();
+
 var canvas = document.createElement("canvas");
 var cx = canvas.getContext("2d");
 
