sistema básico para nombrar niveles (debugging)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="estilo.css">
     <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
 	<script src="script.js"></script>
+	<style>	/*solo para index.html:*/	canvas{margin: 0 auto;display: block;}</style>
 </head>
 <body>
 	<h1>Juego#96</h1>
